# hastebin-rs

./: .gitignore  Cargo.toml  README.md  hello.txt
src/: file.rs  lib.rs
